--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,10 +8,13 @@
             <li><a class="a" routerLink='/terrains'>Terrains</a></li>
             <li><a class="a" routerLink='/coachs'>Coachs</a></li>
         </ul>
-        <ul class="connection">
+        <ul class="connection" *ngIf="!token">
             <li class="connectionItem"><a class="a" routerLink='/connexion'>Se Connecter</a></li>
             <li class="connectionItem">|</li>
             <li class="connectionItem"><a class="a" routerLink='/inscription'>S'inscrire</a></li>
+        </ul>
+        <ul class="connection" *ngIf="token !== ''">
+            <li class="connectionItem"><a class="a" routerLink='/connexion'>Bienvenu {{username}}</a></li>
         </ul>
     </div>
 
