--- a/src/app/admin/admin-button/admin-button.component.css
+++ b/src/app/admin/admin-button/admin-button.component.css
@@ -10,7 +10,7 @@
   cursor: pointer;
   padding: 0 30px;
   letter-spacing: 1px;
-  font-family: inherit;
+  font-family: 'Poppins';
 }
 
 .btn:hover {
