--- a/src/app/admin/container/container.component.css
+++ b/src/app/admin/container/container.component.css
@@ -1,3 +1,10 @@
 .mainContent {
   padding: 50px;
 }
+.addBtn {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
