--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,50 @@
-<p>footer works!</p>
+<div class="footerContainer">
+
+    <div class="footer">
+        <div class="content">
+            <div class="logo">
+                <img src="../../../assets/logo.png" alt="" />
+            </div>
+            <div class="details">
+                <p class="parag">
+                    Avec la plateforme TRENA
+                    On vous offre la chance de pratiquer vos sports préférés tout en facilitant la réservation des
+                    terrains
+                </p>
+            </div>
+        </div>
+        <div class="general">
+            <div class="infos">
+                <h3>INFORMATIONS</h3>
+                <ul class="links">
+                    <li><a routerLink="/terrains">Terrains</a></li>
+                    <li><a routerLink="/coaches">Coachs</a></li>
+                    <li><a routerLink="/terrains">Réservations</a></li>
+                </ul>
+            </div>
+            <div class="socials">
+                <h3>SUIVEZ-NOUS</h3>
+                <ul>
+                    <li>
+                        <i class="fa fa-facebook-square fa-lg" aria-hidden="true"></i>
+                    </li>
+                    <li>
+                        <i class="fa fa-instagram fa-lg" aria-hidden="true" ></i>
+
+                    </li>
+                    <li>
+                        <app-admin-button content="contact@trena.com" color="#fff" bgColor="#FE982A"></app-admin-button>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+
+
+
+    </div>
+    <div class="divider"></div>
+    <h3 class="copyrights">
+        COPYRIGHTS © 2022 TRENA
+    </h3>
+</div>
