--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -14,10 +14,9 @@
   z-index: 99;
 }
 .footerContainer .footer {
- 
 }
 .footer .logo {
-  width: 250px;
+  width: 300px;
   height: 180px;
 }
 .footer .logo img {
@@ -25,10 +24,10 @@
   height: 100%;
 }
 .socials ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 .socials ul i {
 }
@@ -50,7 +49,6 @@
   width: 100%;
   height: 0px;
 
-
   border: 1px solid #6bc4a6;
 }
 .copyrights {
@@ -71,4 +69,10 @@
 .infos,
 .socials {
   padding: 0;
+}
+@media screen and (max-width: 1000px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+  }
 }
