--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -8,4 +8,7 @@
         <span class="circle med"></span>
         <span class="circle small"></span>
     </div>
+    <div class="homeBtn">
+        <app-admin-button bgColor="#fff" color="#1d976c" content="Accueil" (click)="home()"></app-admin-button>
+    </div>
 </section>
