--- a/src/app/components/home/hero/hero.component.css
+++ b/src/app/components/home/hero/hero.component.css
@@ -84,7 +84,11 @@
     background-position: 400%;
   }
 }
-
+.terrainBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .firstWord {
   padding-left: 5px;
 
