--- a/src/app/components/home/hero/hero.component.html
+++ b/src/app/components/home/hero/hero.component.html
@@ -24,6 +24,8 @@
                         <p>+20
                             terrains sportifs</p>
                     </div>
+                    <div class="terrainBtn">
+                        <app-admin-button color="#fff" bgColor="#1d976c" content="Reserver vos terrains" (click)="goToTerrain()"></app-admin-button>                    </div>
 
 
 
