--- a/src/app/pages/single-terrain/single-terrain.component.html
+++ b/src/app/pages/single-terrain/single-terrain.component.html
@@ -42,6 +42,10 @@
                         <i class="fa-solid fa-triangle-exclamation"></i>
                         {{resErrorMessage}}
                     </div>
+                    <div class="success-msg" *ngIf="resSuccessMessage">
+                        <i class="fa-solid fa-triangle-exclamation"></i>
+                        {{resSuccessMessage}}
+                    </div>
 
                     <button type="submit" class="submitBtn" [disabled]="formulaire.invalid"
                         [ngClass]="formulaire.invalid ? 'disabled':''">Réserver</button>
