--- a/src/app/components/home/hero/hero.component.html
+++ b/src/app/components/home/hero/hero.component.html
@@ -26,10 +26,12 @@
                     </div>
 
 
-
-
+                    <div class="btn">
+                        <Button (click)="goToTerrain()">
+                            Réservez votre terrain
+                        </Button>
+                    </div>
                 </div>
-
 
             </div>
         </div>
