--- a/src/app/components/home/hero/hero.component.css
+++ b/src/app/components/home/hero/hero.component.css
@@ -44,11 +44,28 @@
   color: #fff;
   font-size: max(1.8em, 2vw);
 }
-
-.btn {
+button {
+  height: 40px;
+  color: #fff;
+  font-weight: 300;
+  border: none;
+  text-align: center;
+  border-radius: max(0.08em,0.5vw);
+  width: 100%;
+  cursor: pointer;
+  padding: 0 30px;
+  letter-spacing: 1px;
+  font-family: inherit;
   font-size: 20px;
   margin-top: 50px;
+  background: #005326;
+
 }
+
+.btn:hover {
+  opacity: 0.9;
+}
+
 .dynamictexts li {
   color: #005326;
   list-style: none;
